# kribu

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  pyproject.toml  task.md
bindings/: .clang-tidy  CMakeLists.txt  README.md
bindings/src/: kribu_ext.cpp
engine/: CMakeLists.txt  README.md
engine/include/kribu/: math.hpp
engine/src/: math.cpp
engine/tests/: test_math.cpp
python/: README.md
python/src/kribu/: __init__.py  main.py
python/tests/: test_dummy.py
